--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,13 @@ dependencies:
 
   collection: ^1.17.0
   directed_graph: ^0.3.7
+  freezed_annotation: ^2.0.0
   vector_math: ^2.1.4
 
 dev_dependencies:
+  build_runner: ^2.0.0
   flutter_lints: ^2.0.0
+  freezed: ^2.0.0
 
 flutter:
 
